--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="index.css">
+    <link data-trunk rel="stylesheet" href="index.css">
     <title>Yew App</title>
   </head>
 </html>
