--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link data-trunk rel="css" href="index.css">
     <link data-trunk rel="copy-file" href="sunny.jpg">
     <link data-trunk rel="copy-file" href="thunder.jpg">
+    <link data-trunk rel="copy-file" href="test.html">
     <title>Yew App</title>
   </head>
 </html>
