--- a/test.html
+++ b/test.html
@@ -30,6 +30,7 @@
                 }
             }
         </style>
+        <link rel="stylesheet" href="test.css">
     </head>
     <body>
         <svg width="200px" height="200px">
@@ -41,15 +42,7 @@
             <path class="needle" d="M 100 40 L 80 160 L 100 140 L 120 160 L 100 40 Z" stroke="black" stroke-width="5" fill="red"/>
         </svg>
         <svg width="200px" height="200px">
-            <defs>
-                 <linearGradient id="grad" x1="0" x2="0" y1="0" y2="1"> 
-                    <stop offset="0%" stop-color="rgba(0, 0, 0, 0)" />
-                    <stop offset="25%" stop-color="rgba(0, 0, 0, 0)" />
-                    <stop offset="25%" stop-color="rgba(calc(2.55*75), 0, 0, 255)"/>
-                    <stop offset="100%" stop-color="rgba(70, 70, 255, 255"/>
-                </linearGradient>
-            </defs>
-            <path d="M 40 150 A 20 20 0 1 0 70 150 L 70 50 A 10 10 0 1 0 40 50 L 40 150 Z" stroke="black" stroke-width="3" fill="url(#grad)"/>
+            <path class="meter" d="M 40 150 A 20 20 0 1 0 70 150 L 70 50 A 10 10 0 1 0 40 50 L 40 150 Z" stroke="black" stroke-width="3"/>
             <text x="100" y="125" font-size="50px">X°C</text>
         </svg>
     </body>
