--- a/test.html
+++ b/test.html
@@ -30,7 +30,6 @@
                 }
             }
         </style>
-        <link rel="stylesheet" href="test.css">
     </head>
     <body>
         <svg width="200px" height="200px">
@@ -50,7 +49,7 @@
                     <stop offset="100%" stop-color="rgba(70, 70, 255, 255"/>
                 </linearGradient>
             </defs>
-            <path class="meter" d="M 40 150 A 20 20 0 1 0 70 150 L 70 50 A 10 10 0 1 0 40 50 L 40 150 Z" stroke="black" stroke-width="3"/>
+            <path d="M 40 150 A 20 20 0 1 0 70 150 L 70 50 A 10 10 0 1 0 40 50 L 40 150 Z" stroke="black" stroke-width="3" fill="url(#grad)"/>
             <text x="100" y="125" font-size="50px">X°C</text>
         </svg>
     </body>
