fix C not being displayed if value got over 9

--- a/test.html
+++ b/test.html
@@ -50,7 +50,7 @@
                 </linearGradient>
             </defs>
             <path d="M 40 150 A 20 20 0 1 0 70 150 L 70 50 A 10 10 0 1 0 40 50 L 40 150 Z" stroke="black" stroke-width="3" fill="url(#grad)"/>
-            <text x="100" y="125" font-size="50px">X°C</text>
+            <text x="100" y="125" font-size="40px">20°C</text>
         </svg>
     </body>
 </html>
