implemented weather widget

--- a/test.html
+++ b/test.html
@@ -52,5 +52,25 @@
             <path d="M 40 150 A 20 20 0 1 0 70 150 L 70 50 A 10 10 0 1 0 40 50 L 40 150 Z" stroke="black" stroke-width="3" fill="url(#grad)"/>
             <text x="85" y="125" font-size="40px">20°C</text>
         </svg>
+        <svg width="200px" height="200px">
+            <path d="M 40 150 L 160 150 A 40 30 0 0 0 170 100 A 30 30 0 0 0 110 70 A 30 30 0 1 0 40 90 A 10 10 0 1 0 40 150 " stroke="black" stroke-width="5" fill="#555"/>
+            <path d="M 50 150 L 40 180 M 70 150 L 60 180 M 90 150 L 80 180 M 110 150 L 100 180 M 130 150 L 120 180 M 150 150 L 140 180" stroke="blue" stroke-width="7"/>
+        </svg>
+        <svg width="200px" height="200px">
+            <circle cx="120" cy="80" r="50" fill="#ffff00" stroke="black" stroke-width="7"/>
+            <path d="M 40 150 L 160 150 A 40 30 0 0 0 170 100 A 30 30 0 0 0 110 70 A 30 30 0 1 0 40 90 A 10 10 0 1 0 40 150 " stroke="black" stroke-width="5" fill="#555"/>
+            <path d="M 50 150 L 40 180 M 70 150 L 60 180 M 90 150 L 80 180 M 110 150 L 100 180 M 130 150 L 120 180 M 150 150 L 140 180" stroke="blue" stroke-width="7"/>
+        </svg>
+        <svg width="200px" height="200px">
+            <circle cx="120" cy="80" r="50" fill="#ffff00" stroke="black" stroke-width="7"/>
+            <path d="M 40 150 L 160 150 A 40 30 0 0 0 170 100 A 30 30 0 0 0 110 70 A 30 30 0 1 0 40 90 A 10 10 0 1 0 40 150 " stroke="black" stroke-width="5" fill="#555"/>
+        </svg>
+        <svg width="200px" height="200px">
+            <path d="M 100 0 L 100 200 M 0 100 L 200 100 M 30 30 L 170 170 M 170 30 L 30 170" stroke="black" stroke-width="7"/>
+            <circle cx="100" cy="100" r="50" fill="#ffff00" stroke="black" stroke-width="7"/>
+        </svg>
+        <svg width="200px" height="200px">
+            <path d="M 40 150 L 160 150 A 40 30 0 0 0 170 100 A 30 30 0 0 0 110 70 A 30 30 0 1 0 40 90 A 10 10 0 1 0 40 150 " stroke="black" stroke-width="5" fill="#555"/>
+        </svg>
     </body>
 </html>
