--- a/test.html
+++ b/test.html
@@ -73,11 +73,18 @@
             <path d="M 40 150 L 160 150 A 40 30 0 0 0 170 100 A 30 30 0 0 0 110 70 A 30 30 0 1 0 40 90 A 10 10 0 1 0 40 150 " stroke="black" stroke-width="5" fill="#555"/>
         </svg>
         <svg width="200px" height="200px">
-            <polygon points="20,80 80,80, 50,20" stroke="black" stroke-width="5" fill="replace"/>
+            <polygon points="20,80 80,80, 50,20" stroke="black" stroke-width="5" fill="red"/>
             <text x="42" y="73" style="font-size: 50px;">!</text>
             <text x="100" y="40" style="font-size: 25px;">Nominal</text>
             <text x="100" y="70" style="font-size: 25px;">CO2</text>
             <text x="20" y="130" style="font-size: 40px;">1000 ppo</text>
+        </svg>
+        <svg width="200px" height="200px">
+            <polygon points="20,80 80,80, 50,20" stroke="black" stroke-width="5" fill="red"/>
+            <text x="42" y="73" style="font-size: 50px;">!</text>
+            <text x="100" y="40" style="font-size: 25px;">Nominal</text>
+            <text x="100" y="70" style="font-size: 25px;">Humidity</text>
+            <text x="20" y="130" style="font-size: 40px;">90 %</text>
         </svg>
     </body>
 </html>
