--- a/test.html
+++ b/test.html
@@ -11,14 +11,14 @@
                 font-family: sans-serif;
             }
             .needle {
-                animation-name: rotate;
+                animation-name: rotate_needle;
                 animation-duration: 5s;
                 animation-iteration-count: infinite;
                 animation-timing-function: linear;
                 transform-origin: 50% 50%;
             }
 
-            @keyframes rotate {
+            @keyframes rotate_needle {
                 0% {
                     transform: rotate(0deg);
                 }
@@ -86,5 +86,34 @@
             <text x="100" y="70" style="font-size: 25px;">Humidity</text>
             <text x="20" y="130" style="font-size: 40px;">90 %</text>
         </svg>
+        <svg width="200px" height="200px">
+            <line x1=50 y1=75 x2=50 y2=175 stroke="black" stroke-width="5"/>
+            <g class="bag">
+                <polygon points="50,50 83,53 83,97 50,100" stroke="black" stroke-width=5 fill="red"/>
+                <polygon points="83,53 116,56 116,94 83,97" stroke="black" stroke-width=5 fill="white"/>
+                <polygon points="116,56 150,59 150,91 116,94" stroke="black" stroke-width=5 fill="red"/>
+            </g>
+            <text x=25 y=200 style="font-size: 20px;">{speed} km/h</text>
+        </svg>
+        <style>
+            .bag {
+                animation-name: rotate_bag;
+                animation-duration: 5s;
+                animation-iteration-count: infinite;
+                animation-timing-function: linear;
+                transform-origin: 50px 75px;
+            }
+            @keyframes rotate_bag {
+                0% {
+                    transform: rotate(75deg);
+                }
+                50% {
+                    transform: rotate(0deg);
+                }
+                100% {
+                    transform: rotate(75deg);
+                }
+            }
+        </style>
     </body>
 </html>
