wtf is even going on

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <link data-trunk rel="css" href="index.css">
-    <link data-trunk rel="copy-file" href="sunny.jpg">
-    <link data-trunk rel="copy-file" href="thunder.jpg">
+    <link data-trunk rel="copy-file" href="bg_sunny.jpg">
+    <link data-trunk rel="copy-file" href="bg_thunder.jpg">
     <title>Yew App</title>
   </head>
 </html>
