Kinda fixed everything

--- a/test.html
+++ b/test.html
@@ -50,7 +50,21 @@
                 </linearGradient>
             </defs>
             <path d="M 40 150 A 20 20 0 1 0 70 150 L 70 50 A 10 10 0 1 0 40 50 L 40 150 Z" stroke="black" stroke-width="3" fill="url(#grad)"/>
-            <text x="85" y="125" font-size="40px">20°C</text>
+            <path d="M 100 50 M 150 50 L 150 100 L 100 100 L 100 50 M 90 60 L 125 25 L 160 60 M 110 100 L 110 80 L 120 80 L 120 100 M 130 95 L 140 95 L 140 85 L 130 85 L 130 95 L 140 95 M 120 50 L 130 50 L 130 60 L 120 60 L 120 50 L 130 50" stroke="black" stroke-width="3" fill-opacity="0"/>
+            <text x="100" y="150" font-size="40px">20°</text>
+        </svg>
+        <svg width="200px" height="200px">
+            <defs>
+                 <linearGradient id="grad" x1="0" x2="0" y1="0" y2="1"> 
+                    <stop offset="0%" stop-color="rgba(0, 0, 0, 0)" />
+                    <stop offset="25%" stop-color="rgba(0, 0, 0, 0)" />
+                    <stop offset="25%" stop-color="rgba(calc(2.55*75), 0, 0, 255)"/>
+                    <stop offset="100%" stop-color="rgba(70, 70, 255, 255"/>
+                </linearGradient>
+            </defs>
+            <path d="M 40 150 A 20 20 0 1 0 70 150 L 70 50 A 10 10 0 1 0 40 50 L 40 150 Z" stroke="black" stroke-width="3" fill="url(#grad)"/>
+            <path d="M 130 100 L 130 55 M 130 75 L 120 65 M 130 85 L 145 70 M 110 90 L 150 90 A 1 1 0 0 0 150 60 M 110 90 A 1 1 0 0 1 110 60 A 1 1 0 0 1 150 60" stroke="black" stroke-width="3" fill-opacity="0"/>
+            <text x="100" y="150" font-size="40px">20°</text>
         </svg>
         <svg width="200px" height="200px">
             <path d="M 40 150 L 160 150 A 40 30 0 0 0 170 100 A 30 30 0 0 0 110 70 A 30 30 0 1 0 40 90 A 10 10 0 1 0 40 150 " stroke="black" stroke-width="5" fill="#555"/>
