--- a/test.html
+++ b/test.html
@@ -109,6 +109,19 @@
             </g>
             <text x=25 y=200 style="font-size: 20px;">{speed} km/h</text>
         </svg>
+        <svg width="200px" height="200px">
+            <defs>
+                <linearGradient id="grad_water" x1="0" x2="0" y1="0" y2="1"> 
+                   <stop offset="0%" stop-color="rgba(0, 0, 0, 0)" />
+                   <stop offset="25%" stop-color="rgba(0, 0, 0, 0)" />
+                   <stop offset="25%" stop-color="rgba(0, 0, 255, 255)"/>
+                   <stop offset="100%" stop-color="rgba(0, 0, 255, 255"/>
+               </linearGradient>
+           </defs>
+            <path d="M 10 60 L 10 120 L 50 120 L 50 60 M 10 70 L 20 70 M 10 80 L 20 80 M 10 90 L 20 90 M 10 100 L 20 100 M 10 110 L 20 110" stroke="black" stroke-width=5 fill="url(#grad_water)"/>
+            <text x=100 y=80 style="font-size: 50px;">20</text>
+            <text x=95 y=120 style="font-size: 35px;">Liter</text>
+        </svg>
         <style>
             .bag {
                 animation-name: rotate_bag;
